fix wrap

--- a/fonts/icomoon/style.css
+++ b/fonts/icomoon/style.css
@@ -2955,7 +2955,9 @@
 
 
 .tech-container{
+
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
